--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script><script type="text/javascript" src="https://blockchain.info/Resources/js/pay-now-button.js"></script>
+<style>
+html { 
+  background: url(bg.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+</style>
+</head>
 </head>
 <body>
+<center>
 <div style="font-size:16px;margin:0 auto;width:300px" class="blockchain-btn"
      data-address="1DBEbUABndnDZiaWETyRs1np9MViiYouJx"
      data-shared="false">
@@ -23,5 +35,6 @@
         <font color="red">[[error]]</font>
     </div>
 </div>
+</center>
 </body>
 </html>
